--- a/RoboticArmMWC2016/ArmController/RoboticArm.csproj
+++ b/RoboticArmMWC2016/ArmController/RoboticArm.csproj
@@ -36,13 +36,16 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RobotHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sender\ISender.cs" />
+    <Compile Include="Sender\SenderEnum.cs" />
+    <Compile Include="Sender\TcpSender.cs" />
+    <Compile Include="Sender\UDPSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj">
@@ -58,6 +61,7 @@
       <Name>UDPDLL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
